--- a/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
+++ b/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
@@ -181,21 +181,27 @@
       <h3>Precios y Costos</h3>
       <ion-grid class="ion-no-padding">
         <ion-row>
-          <ion-col size="12" size-sm="4">
+          <ion-col size="12" size-sm="3">
             <ion-item class="input-item">
               <ion-label position="stacked">Precio Costo</ion-label>
               <ion-input type="text" inputmode="numeric" formControlName="precioCosto" appNumericFormat></ion-input>
             </ion-item>
           </ion-col>
-          <ion-col size="12" size-sm="4">
+          <ion-col size="12" size-sm="3">
             <ion-item class="input-item">
               <ion-label position="stacked">Precio Venta *</ion-label>
               <ion-input type="text" inputmode="numeric" formControlName="precioVenta" appNumericFormat></ion-input>
             </ion-item>
           </ion-col>
-          <ion-col size="12" size-sm="4">
+          <ion-col size="12" size-sm="3">
             <ion-item class="input-item">
-              <ion-label position="stacked">Margen de Ganancia (%)</ion-label>
+              <ion-label position="stacked">IVA (%)</ion-label>
+              <ion-input type="number" formControlName="porcentajeIva" placeholder="0"></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col size="12" size-sm="3">
+            <ion-item class="input-item">
+              <ion-label position="stacked">Margen (%)</ion-label>
               <ion-input type="text" formControlName="margenGanancia" readonly></ion-input>
             </ion-item>
           </ion-col>
