--- a/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
+++ b/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
@@ -195,7 +195,7 @@
           </ion-col>
           <ion-col size="12" size-sm="3">
             <ion-item class="input-item">
-              <ion-label position="stacked">IVA (%)</ion-label>
+              <ion-label position="stacked">IVA (%) (Opcional)</ion-label>
               <ion-input type="number" formControlName="porcentajeIva" placeholder="0"></ion-input>
             </ion-item>
           </ion-col>
